[gd_scene load_steps=4 format=3 uid="uid://c3rdndhhnnm5i"]

[ext_resource type="Script" path="res://log_in/log_in_scene.gd" id="1_b1uhd"]
[ext_resource type="Script" path="res://log_in/log_in_button.gd" id="2_sob5s"]
[ext_resource type="Script" path="res://log_in/timer_label.gd" id="3_yqhy8"]

[node name="LogInScene" type="Node2D"]
script = ExtResource("1_b1uhd")

[node name="LogInButton" type="Button" parent="."]
offset_left = 662.0
offset_top = 617.0
offset_right = 842.0
offset_bottom = 667.0
size_flags_horizontal = 4
text = "Log in"
script = ExtResource("2_sob5s")

[node name="UsernameLineEdit" type="LineEdit" parent="LogInButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -185.0
offset_right = 160.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Username"
alignment = 1

[node name="PasswordLineEdit" type="LineEdit" parent="LogInButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -105.0
offset_right = 160.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Password"
alignment = 1
secret = true

[node name="Label" type="Label" parent="."]
offset_left = 24.0
offset_top = 21.0
offset_right = 64.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 40
script = ExtResource("3_yqhy8")

[node name="Timer" type="Timer" parent="Label"]
wait_time = 1e+06

[connection signal="log_in_pressed" from="LogInButton" to="." method="_on_log_in_button_log_in_pressed"]
[connection signal="pressed" from="LogInButton" to="LogInButton" method="_on_pressed"]
